--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A robust, type-safe command line argument parser with automatic type inference, validation, help generation and complex sub-command support",
   "type": "module",
   "main": "dist/index.cjs",
@@ -52,19 +52,27 @@
     "build:checks": "pnpm check:cir-dep && pnpm check:types"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
+    "@modelcontextprotocol/sdk": "^1.13.1",
     "chalk": "^5.4.1",
+    "dotenv": "^16.5.0",
+    "js-yaml": "^4.1.0",
     "magic-regexp": "^0.10.0",
-    "zod": "^3.25.49"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "@types/node": "^22.15.29",
+    "@types/express": "^5.0.3",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.15.33",
     "cross-env": "^7.0.3",
+    "express": "^5.1.0",
     "madge": "^8.0.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.0"
+    "vitest": "^3.2.4"
   }
 }
