--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "./examples/**/*.ts"],
   "exclude": ["./tests/**/*.ts", "./script/**/*.ts", "./dist/**/*"],
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDir": ".",
     "outDir": "./dist",
     "target": "ES2020",
     "module": "ESNext",
