fix: Fixed MCP Output Schema Support - Resolved the critical issue where MCP tools with output schemas failed with `"Tool has an output schema but no structured content was provided"` error feat: Enhanced Handler Context - Added `isMcp` flag to handler context feat: Improved Response Format -  MCP tools now correctly return both `content` and `structuredContent` fields as required by the JSON-RPC 2.0 specification feat: Handlers can now reliably detect when they're being called from MCP mode vs CLI mode feat: Add `--s-save-DXT [directory]` system flag to support the new Anthropic DXT format: https://www.anthropic.com/engineering/desktop-extensions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "include": ["./src/**/*.ts", "./examples/**/*.ts"],
-  "exclude": ["./tests/**/*.ts", "./script/**/*.ts", "./dist/**/*"],
+  "include": ["./src/**/*.ts"],
+  "exclude": ["./tests/**/*.ts", "./script/**/*.ts", "./examples/**/*.ts", "./dist/**/*"],
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "./dist",
+    "rootDir": "./src",
+    "outDir": "./dist/src",
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Node",
