--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "1.1.0",
-  "description": "A robust, type-safe command line argument parser with automatic type inference, validation, help generation and complex sub-command support, now with built-in MCP and fuzzy testing support.",
+  "version": "1.2.0",
+  "description": "A robust, type-safe command line argument parser with automatic type inference, validation, help generation and complex sub-command support, now with built-in MCP, DXT and fuzzy testing support.",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -18,7 +18,14 @@
     "./package.json": "./package.json"
   },
   "files": [
-    "dist",
+    "dist/index.cjs",
+    "dist/index.cjs.map",
+    "dist/index.mjs",
+    "dist/index.mjs.map",
+    "dist/index.min.mjs",
+    "dist/index.min.mjs.map",
+    "dist/src/**/*.d.ts",
+    "dist/src/**/*.d.ts.map",
     "README.md",
     "LICENSE"
   ],
@@ -30,22 +37,32 @@
     "CLI",
     "Arg Parser",
     "CLI Commands",
-    "Sub-commands"
+    "Sub-commands",
+    "MCP",
+    "LLM Tool Calls",
+    "DXT"
   ],
   "author": "Nicolas Embleton <nicolas.embleton@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist dist-examples",
     "build:types": "tsc --project tsconfig.json --emitDeclarationOnly",
     "build:cjs": "cross-env VITE_BUILD_FORMAT=cjs vite build",
     "build:esm": "cross-env VITE_BUILD_FORMAT=es VITE_MINIFY_BUILD=false vite build",
     "build:min": "cross-env VITE_BUILD_FORMAT=es VITE_MINIFY_BUILD=true vite build",
     "build": "pnpm clean && pnpm run build:types && pnpm run build:cjs && pnpm run build:esm && pnpm run build:min",
     "build:watch": "tsc --watch",
+    "build:examples": "tsc --project tsconfig.examples.json",
     "prepublishOnly": "pnpm build && pnpm test:run",
     "test:watch": "vitest",
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
+    "test:mcp": "bun tests/mcp/integration/run-integration-tests.ts",
+    "test:mcp:verbose": "bun tests/mcp/integration/run-integration-tests.ts --verbose",
+    "test:mcp:e2e": "bun tests/mcp/integration/run-integration-tests.ts --suite end-to-end",
+    "test:mcp:compliance": "bun tests/mcp/integration/run-integration-tests.ts --suite protocol-compliance",
+    "test:mcp:performance": "bun tests/mcp/integration/run-integration-tests.ts --suite performance",
+    "test:mcp:canny": "bun tests/mcp/integration/run-integration-tests.ts --suite canny-cli",
     "format": "prettier . --write",
     "check:cir-dep": "madge ./ -c --ts-config tsconfig.dev.json",
     "check:types": "tsc --project ./tsconfig.dev.json --noEmit",
@@ -54,10 +71,12 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "adm-zip": "^0.5.16",
     "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "js-yaml": "^4.1.0",
     "magic-regexp": "^0.10.0",
+    "node-fetch": "^3.3.2",
     "zod": "^3.25.67"
   },
   "optionalDependencies": {
@@ -66,6 +85,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@types/adm-zip": "^0.5.7",
     "@types/express": "^5.0.3",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.15.33",
