feat: add full, much nicer MCP support + Anthropic DXT packaging with updated unified API feat: externalize the --s-save-env-to / --s-with-env behind a plugin structure feat: --s-mcp-serve now centralizes the MCP server, each command is a new tool with auto-introspection via flags, auto-ENV loading / configuration screen (DXT) via IFlag["env"] property

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 node_modules
 .env*
 dist
+
+# A local pull of https://github.com/modelcontextprotocol
+docs/MCP/
+# Some DXT examples from Claude
+examples/claude/
+#
+docs/@alcyone-labs/
+
+# Keep icons
+!docs/MCP/icons
