--- a/deno.json
+++ b/deno.json
@@ -10,9 +10,9 @@
   "tasks": {
     "example:getting-started": "deno run --allow-read --allow-write --allow-env examples/getting-started.ts",
     "example:simple-cli": "deno run --allow-read --allow-write --allow-env examples/simple-cli.ts",
-    "example:v1.1.0-showcase": "deno run --allow-read --allow-write --allow-env examples/v1.1.0-showcase.ts",
+    "example:traditional-syntax": "deno run --allow-read --allow-write --allow-env examples/traditional-syntax-demo.ts",
     "example:fzf-search": "deno run --allow-read --allow-write --allow-env --allow-run examples/fzf-search-cli.ts",
-    "example:with-env": "deno run --allow-read --allow-write --allow-env examples/with-env-example.ts"
+    "example:unified-tools": "deno run --allow-read --allow-write --allow-env examples/unified-tools-demo.js"
   },
   "unstable": ["sloppy-imports"]
 }
