--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "1.2.0",
-  "description": "A robust, type-safe command line argument parser with automatic type inference, validation, help generation and complex sub-command support, now with built-in MCP, DXT and fuzzy testing support.",
+  "version": "1.3.0",
+  "description": "A robust, type-safe command line argument parser with plugin architecture, dependency injection, Claude Desktop compliant MCP integration, autonomous DXT builds, and zero-dependency core functionality.",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -44,13 +44,17 @@
   ],
   "author": "Nicolas Embleton <nicolas.embleton@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "clean": "rm -rf dist dist-examples",
     "build:types": "tsc --project tsconfig.json --emitDeclarationOnly",
     "build:cjs": "cross-env VITE_BUILD_FORMAT=cjs vite build",
     "build:esm": "cross-env VITE_BUILD_FORMAT=es VITE_MINIFY_BUILD=false vite build",
     "build:min": "cross-env VITE_BUILD_FORMAT=es VITE_MINIFY_BUILD=true vite build",
-    "build": "pnpm clean && pnpm run build:types && pnpm run build:cjs && pnpm run build:esm && pnpm run build:min",
+    "build": "pnpm clean && pnpm run build:types && pnpm run build:cjs && pnpm run build:esm && pnpm run build:min && pnpm run build:assets",
+    "build:assets": "mkdir -p dist/assets && cp docs/MCP/icons/logo_1_small.jpg dist/assets/ && cp tsdown.dxt.config.ts dist/assets/ && cp .dxtignore.template dist/assets/",
     "build:watch": "tsc --watch",
     "build:examples": "tsc --project tsconfig.examples.json",
     "prepublishOnly": "pnpm build && pnpm test:run",
@@ -60,38 +64,49 @@
     "test:mcp": "bun tests/mcp/integration/run-integration-tests.ts",
     "test:mcp:verbose": "bun tests/mcp/integration/run-integration-tests.ts --verbose",
     "test:mcp:e2e": "bun tests/mcp/integration/run-integration-tests.ts --suite end-to-end",
-    "test:mcp:compliance": "bun tests/mcp/integration/run-integration-tests.ts --suite protocol-compliance",
+    "test:mcp:protocol": "bun tests/mcp/integration/run-integration-tests.ts --suite protocol-compliance",
     "test:mcp:performance": "bun tests/mcp/integration/run-integration-tests.ts --suite performance",
     "test:mcp:canny": "bun tests/mcp/integration/run-integration-tests.ts --suite canny-cli",
+    "test:mcp:compliance": "vitest run tests/mcp/compliance/",
+    "test:mcp:dxt": "vitest run tests/mcp/compliance/dxt-compliance.test.ts",
     "format": "prettier . --write",
     "check:cir-dep": "madge ./ -c --ts-config tsconfig.dev.json",
     "check:types": "tsc --project ./tsconfig.dev.json --noEmit",
     "build:checks": "pnpm check:cir-dep && pnpm check:types",
-    "test:built": "node test-built-library.mjs"
+    "test:built": "node test-built-library.mjs",
+    "tsdown:dxt": "tsdown -c tsdown.dxt.config.ts",
+    "dxt:validate": "npx @anthropic-ai/dxt validate",
+    "dxt:info": "npx @anthropic-ai/dxt info",
+    "dxt:sign": "npx @anthropic-ai/dxt sign --self-signed",
+    "dxt:pack": "npx @anthropic-ai/dxt pack",
+    "dxt:unpack": "npx @anthropic-ai/dxt unpack",
+    "dxt:verify": "npx @anthropic-ai/dxt verify"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "adm-zip": "^0.5.16",
-    "chalk": "^5.4.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
+    "fflate": "^0.8.2",
     "js-yaml": "^4.1.0",
     "magic-regexp": "^0.10.0",
-    "node-fetch": "^3.3.2",
-    "zod": "^3.25.67"
+    "zod": "^3.25.76",
+    "@alcyone-labs/simple-mcp-logger": "^1.0.1",
+    "@alcyone-labs/simple-chalk": "^1.0.1"
   },
   "optionalDependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.1",
-    "express": "^5.1.0"
+    "@modelcontextprotocol/sdk": "^1.15.1",
+    "express": "^5.1.0",
+    "tsdown": "^0.12.9"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
     "@types/adm-zip": "^0.5.7",
     "@types/express": "^5.0.3",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.15.33",
+    "@types/node": "^22.16.3",
     "cross-env": "^7.0.3",
     "madge": "^8.0.0",
-    "prettier": "^3.6.1",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
