chore: fix the post-publication test post 2.0.0

--- a/package.json
+++ b/package.json
@@ -75,6 +75,10 @@
     "check:types": "tsc --project ./tsconfig.dev.json --noEmit",
     "build:checks": "pnpm check:cir-dep && pnpm check:types",
     "test:built": "node test-built-library.mjs",
+    "test:post-publish": "node scripts/post-publish-validation.mjs",
+    "test:post-publish:mcp": "node scripts/post-publish-mcp-validation.mjs",
+    "test:post-publish:all": "pnpm test:post-publish && pnpm test:post-publish:mcp",
+    "validate:v2": "node scripts/validate-v2.mjs",
     "tsdown:dxt": "tsdown -c tsdown.dxt.config.ts",
     "dxt:validate": "npx @anthropic-ai/dxt validate",
     "dxt:info": "npx @anthropic-ai/dxt info",
