chore: fix missing missing types chore: improved MCP version compliance feat: function-based type handling now must define the type it returns, this will unlock nice features and make it easier to upgrade to Zod V4 feat: add support for MCP output_schema field for clients that support it, CLI isn't impacted by it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "exclude": ["./tests/**/*.ts", "./script/**/*.ts", "./examples/**/*.ts", "./dist/**/*"],
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist/src",
+    "outDir": "./dist",
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Node",
