--- a/examples/community/canny-cli/package.json
+++ b/examples/community/canny-cli/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
     "@alcyone-labs/arg-parser": "file:../../../",
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "zod": "^3.23.8"
   }
 }
