--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "A robust, type-safe command line argument parser with plugin architecture, dependency injection, Claude Desktop compliant MCP integration, autonomous DXT builds, and zero-dependency core functionality.",
   "type": "module",
   "main": "dist/index.cjs",
@@ -24,8 +24,10 @@
     "dist/index.mjs.map",
     "dist/index.min.mjs",
     "dist/index.min.mjs.map",
-    "dist/src/**/*.d.ts",
-    "dist/src/**/*.d.ts.map",
+    "dist/index.d.ts",
+    "dist/index.d.ts.map",
+    "dist/**/*.d.ts",
+    "dist/**/*.d.ts.map",
     "dist/assets/**/*",
     "README.md",
     "LICENSE"
