chore: pretty-fy all-the-things

--- a/dxt-packages/default-dir-server-dxt/manifest.json
+++ b/dxt-packages/default-dir-server-dxt/manifest.json
@@ -11,10 +11,7 @@
     "entry_point": "server/index.mjs",
     "mcp_config": {
       "command": "node",
-      "args": [
-        "${__dirname}/server/index.mjs",
-        "--s-mcp-serve"
-      ],
+      "args": ["${__dirname}/server/index.mjs", "--s-mcp-serve"],
       "env": {}
     }
   },
