--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": ["./src/**/*.ts"],
-  "exclude": ["./tests/**/*.ts", "./script/**/*.ts", "./examples/**/*.ts", "./dist/**/*"],
+  "exclude": [
+    "./tests/**/*.ts",
+    "./script/**/*.ts",
+    "./examples/**/*.ts",
+    "./dist/**/*"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
