--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "description": "A robust, type-safe command line argument parser with plugin architecture, dependency injection, Claude Desktop compliant MCP integration, autonomous DXT builds, and zero-dependency core functionality.",
   "type": "module",
   "main": "dist/index.cjs",
@@ -57,7 +57,7 @@
     "build:esm": "cross-env VITE_BUILD_FORMAT=es VITE_MINIFY_BUILD=false vite build",
     "build:min": "cross-env VITE_BUILD_FORMAT=es VITE_MINIFY_BUILD=true vite build",
     "build": "pnpm clean && pnpm run build:types && pnpm run build:cjs && pnpm run build:esm && pnpm run build:min && pnpm run build:assets",
-    "build:assets": "mkdir -p dist/assets && cp docs/MCP/icons/logo_1_small.jpg dist/assets/ && cp tsdown.dxt.config.ts dist/assets/ && cp .dxtignore.template dist/assets/",
+    "build:assets": "mkdir -p dist/assets && cp docs/MCP/icons/logo_1_small.jpg dist/assets/ && cp .dxtignore.template dist/assets/",
     "build:watch": "tsc --watch",
     "build:examples": "tsc --project tsconfig.examples.json",
     "prepublishOnly": "pnpm build && pnpm test:run",
@@ -81,7 +81,6 @@
     "test:post-publish:mcp": "node scripts/post-publish-mcp-validation.mjs",
     "test:post-publish:all": "pnpm test:post-publish && pnpm test:post-publish:mcp",
     "validate:v2": "node scripts/validate-v2.mjs",
-    "tsdown:dxt": "tsdown -c tsdown.dxt.config.ts",
     "dxt:validate": "npx @anthropic-ai/dxt validate",
     "dxt:info": "npx @anthropic-ai/dxt info",
     "dxt:sign": "npx @anthropic-ai/dxt sign --self-signed",
