--- a/examples/community/canny-cli/package.json
+++ b/examples/community/canny-cli/package.json
@@ -13,7 +13,8 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "@alcyone-labs/arg-parser": "file:../../../",
+    "@modelcontextprotocol/sdk": "github:Alcyone-Labs/mcp-typescript-sdk",
     "chalk": "^5.4.1",
-    "zod": "^3.23.8"
+    "zod": "^4.0.5"
   }
 }
