--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "2.7.0",
+  "version": "2.7.1",
   "description": "A robust, type-safe CLI builder with out-of-the-box support for creating MCPs and bundling Claude Desktop's DXT packages",
   "type": "module",
   "main": "dist/index.cjs",
@@ -69,7 +69,7 @@
     "test:watch": "vitest",
     "test:run": "vitest run",
     "test:fast": "vitest run --exclude=\"**/integration/**\"",
-    "test:integration": "vitest run --testTimeout=30000 --fileParallelism=false --poolOptions.forks.singleFork=true tests/mcp/integration/",
+    "test:integration": "cross-env VITEST_INCLUDE_INTEGRATION=1 vitest run --testTimeout=30000 --fileParallelism=false --poolOptions.forks.singleFork=true tests/mcp/integration/",
     "test:all": "pnpm test:fast && pnpm test:integration",
     "test:ui": "vitest --ui",
     "test:mcp": "bun tests/mcp/integration/run-integration-tests.ts",
@@ -121,6 +121,7 @@
     "madge": "^8.0.0",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
