--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "2.8.2",
+  "version": "2.9.0",
   "description": "A robust, type-safe CLI builder with out-of-the-box support for creating MCPs and bundling Claude Desktop's DXT packages",
   "type": "module",
   "main": "dist/index.cjs",
@@ -38,7 +38,7 @@
   },
   "pnpm": {
     "overrides": {
-      "zod": "^4.0.5"
+      "zod": "^4.1.13"
     }
   },
   "keywords": [
@@ -64,12 +64,13 @@
     "build": "pnpm clean && pnpm run build:types && pnpm run build:cjs && pnpm run build:esm && pnpm run build:min && pnpm run build:assets",
     "build:assets": "mkdir -p dist/assets && cp docs/MCP/icons/logo_1_small.jpg dist/assets/ && cp .dxtignore.template dist/assets/",
     "build:watch": "tsc --watch",
+    "bump": "tsx scripts/bump-version.ts",
     "build:examples": "tsc --project tsconfig.examples.json",
     "prepublishOnly": "pnpm build && pnpm test:fast",
     "test:watch": "vitest",
     "test:run": "vitest run",
     "test:fast": "vitest run --exclude=\"**/integration/**\"",
-    "test:integration": "cross-env VITEST_INCLUDE_INTEGRATION=1 vitest run --testTimeout=30000 --fileParallelism=false --poolOptions.forks.singleFork=true tests/mcp/integration/",
+    "test:integration": "cross-env VITEST_INCLUDE_INTEGRATION=1 vitest run --testTimeout=30000 --fileParallelism=false tests/mcp/integration/",
     "test:all": "pnpm test:fast && pnpm test:integration",
     "test:ui": "vitest --ui",
     "test:mcp": "bun tests/mcp/integration/run-integration-tests.ts",
@@ -100,31 +101,31 @@
     "@alcyone-labs/modelcontextprotocol-sdk": "^1.16.0",
     "@alcyone-labs/simple-chalk": "^1.0.1",
     "@alcyone-labs/simple-mcp-logger": "^1.2.1",
-    "get-tsconfig": "^4.10.1",
+    "get-tsconfig": "^4.13.0",
     "magic-regexp": "^0.10.0",
-    "zod": "^4.1.11"
+    "zod": "^4.1.13"
   },
   "optionalDependencies": {
-    "dotenv": "^16.6.1",
-    "express": "^5.1.0",
-    "js-yaml": "^4.1.0",
-    "smol-toml": "^1.4.1",
-    "tsdown": "^0.13.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "js-yaml": "^4.1.1",
+    "smol-toml": "^1.5.2",
+    "tsdown": "^0.16.8"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/adm-zip": "^0.5.7",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.6",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.16.5",
-    "cross-env": "^7.0.3",
+    "@types/node": "^22.19.1",
+    "cross-env": "^10.1.0",
     "madge": "^8.0.0",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.15"
   }
 }
