--- a/package.json
+++ b/package.json
@@ -70,12 +70,11 @@
     "build:watch": "tsc --watch",
     "bump": "tsx scripts/bump-version.ts",
     "build:examples": "tsc --project tsconfig.examples.json",
-    "prepublishOnly": "pnpm build && pnpm test:fast",
-    "test:watch": "vitest",
-    "test:run": "vitest run",
-    "test:fast": "vitest run --exclude=\"**/integration/**\"",
+    "prepublishOnly": "pnpm build && pnpm test",
+    "test": "vitest run --exclude=\"**/integration/**\"",
+    "test:all": "vitest run",
     "test:integration": "cross-env VITEST_INCLUDE_INTEGRATION=1 vitest run --testTimeout=30000 --fileParallelism=false tests/mcp/integration/",
-    "test:all": "pnpm test:fast && pnpm test:integration",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:mcp": "bun tests/mcp/integration/run-integration-tests.ts",
     "test:mcp:verbose": "bun tests/mcp/integration/run-integration-tests.ts --verbose",
