--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcyone-labs/arg-parser",
-  "version": "2.13.5",
+  "version": "2.14.0",
   "description": "A robust, type-safe CLI builder with out-of-the-box support for creating MCPs and bundling Claude Desktop's DXT packages",
   "keywords": [
     "Arg Parser",
@@ -106,6 +106,7 @@
   "dependencies": {
     "@alcyone-labs/simple-chalk": "^1.0.2",
     "@alcyone-labs/simple-mcp-logger": "^1.2.1",
+    "@clack/prompts": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.25.3",
     "get-tsconfig": "^4.13.0",
     "magic-regexp": "^0.10.0",
